--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,42 @@
-appdirs==1.4.4
-apt-xapian-index==0.49
-bcrypt==3.1.7
-blinker==1.4
-Brlapi==0.7.0
-certifi==2019.11.28
+absl-py==0.10.0
+astunparse==1.6.3
+cachetools==4.1.1
+certifi==2020.6.20
 chardet==3.0.4
-chrome-gnome-shell==0.0.0
-Click==7.0
-cmake==3.18.0
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-distlib==0.3.1
-distro==1.4.0
-distro-info===0.23ubuntu1
-duplicity==0.8.12.0
-entrypoints==0.3
-fasteners==0.14.1
-filelock==3.0.12
+click==7.1.2
+flake8==3.8.3
 Flask==1.1.2
-Flask-Cors==3.0.8
-future==0.18.2
-gpg===1.13.1-unknown
-httplib2==0.14.0
-idna==2.8
+gast==0.3.3
+google-auth==1.21.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.31.0
+h5py==2.10.0
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-Markdown==3.1.1
-MarkupSafe==1.1.0
-monotonic==1.5
-netifaces==0.10.4
-nodeenv==1.4.0
+Keras-Preprocessing==1.1.2
+Markdown==3.2.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+numpy==1.18.5
 oauthlib==3.1.0
-olefile==0.46
-packaging==20.3
-paramiko==2.6.0
-pexpect==4.6.0
-Pillow==7.0.0
-protobuf==3.6.1
-psutil==5.5.1
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-Pygments==2.3.1
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==2.4.6
-PyQt5==5.14.1
-pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.1
-python-debian===0.1.36ubuntu1
-python-xapp==1.8.1
-python-xlib==0.23
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
-requests==2.22.0
-requests-unixsocket==0.2.0
-scikit-build==0.11.1
-SecretStorage==2.3.1
-setproctitle==1.1.10
-simplejson==3.16.0
-sip==4.19.21
-six==1.14.0
-systemd-python==234
-tinycss==0.4
-ubuntu-advantage-tools==20.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-virtualenv==20.0.28
-wadllib==1.3.3
+opt-einsum==3.3.0
+protobuf==3.13.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pyflakes==2.2.0
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
+scipy==1.4.1
+six==1.15.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.0
+tensorflow-estimator==2.3.0
+termcolor==1.1.0
+urllib3==1.25.10
 Werkzeug==1.0.1
-xkit==0.0.0
+wrapt==1.12.1
