--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 click==7.1.2
 flake8==3.8.3
 Flask==1.1.2
+Flask-SQLAlchemy==2.4.4
 gast==0.3.3
 google-auth==1.21.0
 google-auth-oauthlib==0.4.1
@@ -19,9 +20,11 @@ Keras-Preprocessing==1.1.2
 Markdown==3.2.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
+mysqlclient==2.0.1
 numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
+Pillow==7.2.0
 protobuf==3.13.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -32,6 +35,7 @@ requests-oauthlib==1.3.0
 rsa==4.6
 scipy==1.4.1
 six==1.15.0
+SQLAlchemy==1.3.19
 tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.0
